UI improvements: compact NumberWithSlider layout, fixed label alignment, tightened numeric inputs, improved adjustment panel spacing

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@ body,
   padding: 0;
   min-height: 100%;
 }
+/* Remove number input spinners */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
